Fixed issue with warnings items not showing in virtual scroll at first load

--- a/src/app/pages/warning-list/warning-list.page.scss
+++ b/src/app/pages/warning-list/warning-list.page.scss
@@ -2,6 +2,14 @@ ion-refresher, ion-content {
     background-color: var(--ion-background-color,#fff);
 }
 
+ion-virtual-scroll {
+    opacity: 0;
+    transition: opacity 1s linear;
+
+    &.loaded {
+        opacity: 1;
+    }
+}
 ion-item-divider {
     app-warning-list-header {
         width: 100%;
